[package]
name = "bluetooth-classic"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tokio-test = "*"

[dependencies]
thiserror = "2.0.17"
tokio = {version = "1.47.1", features = ["time", "rt", "rt-multi-thread", "io-util"]}
uuid = "1.18.1"
crossbeam = "0.8.4"
windows = {version = "0.62.1", features = ["Foundation_Collections", "Devices_Bluetooth", "Devices_Bluetooth_Rfcomm", "Networking_Sockets", "Storage_Streams", "Devices_Enumeration"]}
windows-future = "0.3.1"